# openapi.yaml
@@ -32,22 +32,6 @@ paths:
           description: OK
       tags:
       - CBOM Resource
-  /api/v1/cbom/scan:
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/ScanRequest"
-        required: true
-      responses:
-        "200":
-          description: OK
-        "400":
-          description: Bad Request
-      summary: Scan Repo
-      tags:
-      - CBOM Scan Rest Resource
   /api/v1/cbom/{projectIdentifier}:
     post:
       parameters:
@@ -134,6 +118,22 @@ paths:
           description: OK
       tags:
       - Compliance Resource
+  /api/v1/scan:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ScanRequest"
+        required: true
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+      summary: Scan
+      tags:
+      - Scanning Resource
 components:
   schemas:
     Credentials:
